--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <meta name="description" content="Perfectly excecuted reqruitment task!">
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
       <meta property="og:title" content="Valueadd - Reqruitment Task">
-      <meta property=”og:image” content="https://soliniak.github.io/valueadd/images/logo-black.png” />
+      <meta property="og:image" content="https://soliniak.github.io/valueadd/images/logo-black.png">
       <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
       <link rel="stylesheet" href="./style/style.min.css">
       <title>Valueadd - Reqruitment Task</title>
