--- a/index.html
+++ b/index.html
@@ -25,9 +25,12 @@
 
                   <ul class="main__menu" aria-hidden="true">
                         <button class="close__menu" aria-label="Close menu" aria-expanded="false">
-                              <svg class="cross__svg" xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18">
-                                    <path class="cross" fill="none" fill-rule="evenodd" stroke="#000000" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 1v16M1 9h16"/>
-                              </svg>  
+                              <svg class="cross__svg" xmlns="http://www.w3.org/2000/svg" width="18" height="18"
+                                    viewBox="0 0 18 18">
+                                    <path class="cross" fill="none" fill-rule="evenodd" stroke="#000000"
+                                          stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                          d="M9 1v16M1 9h16" />
+                              </svg>
                         </button>
                         <li class="menu__item">
                               <h1 class="logo--vertical">
@@ -81,7 +84,8 @@
                         <div class="passion development">
                               <picture class="passion__icon">
                                     <source data-srcset="./images/icon_development.svg">
-                                    <img data-src="./images/icon_development.svg" alt="Development icon" class="lazyload">
+                                    <img data-src="./images/icon_development.svg" alt="Development icon"
+                                          class="lazyload">
                               </picture>
                               <div class="passion__caption">
                                     <h3 class="subsection__header">
